--- a/AdoptMe2/app/src/main/AndroidManifest.xml
+++ b/AdoptMe2/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".InfoActivity"></activity>
+        <activity android:name=".InfoActivity" />
+        <activity android:name=".CreaActivity"></activity>
     </application>
 
 </manifest>
