--- a/AdoptMe2/app/build.gradle
+++ b/AdoptMe2/app/build.gradle
@@ -26,13 +26,17 @@ dependencies {
     })
     //linies afegides firebase
 
-
+    //pel firebase tot ha de tenir la mateixa versió !!!
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.3.1'
-    compile 'com.google.firebase:firebase-core:9.0.0'
-    compile 'com.google.firebase:firebase-database:9.0.0'
+    compile 'com.google.firebase:firebase-core:10.0.0'
+    compile 'com.google.firebase:firebase-database:10.0.0'
+    compile 'com.google.firebase:firebase-storage:10.0.0'
+    compile 'com.google.firebase:firebase-auth:10.0.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:design:25.1.1'
+
     testCompile 'junit:junit:4.12'
 }
 
