--- a/AdoptMe2/app/src/main/AndroidManifest.xml
+++ b/AdoptMe2/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="barcons.pol.adoptme">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -20,7 +22,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".InfoActivity" />
-        <activity android:name=".CreaActivity"></activity>
+        <activity android:name=".CreaActivity" />
     </application>
 
 </manifest>
