--- a/AdoptMe2/app/src/main/AndroidManifest.xml
+++ b/AdoptMe2/app/src/main/AndroidManifest.xml
@@ -5,9 +5,11 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
-    <uses-feature android:name="android.hardware.camera" android:required="true" />
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
 
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -16,8 +18,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <!-- Ho utilitzem per donar l'Uri de les imatges creades amb la càmara des de l'app i que
-        guardem de forma local -->
+
+        <!--
+        Ho utilitzem per donar l'Uri de les imatges creades amb la càmara des de l'app i que
+        guardem de forma local
+        -->
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="com.example.android.fileprovider"
@@ -25,7 +30,7 @@
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_paths"></meta-data>
+                android:resource="@xml/file_paths" />
         </provider>
 
         <activity
@@ -40,6 +45,7 @@
         </activity>
         <activity android:name=".InfoActivity" />
         <activity android:name=".CreaActivity" />
+        <activity android:name=".FiltraActivity"></activity>
     </application>
 
 </manifest>
