--- a/AdoptMe2/app/build.gradle
+++ b/AdoptMe2/app/build.gradle
@@ -35,7 +35,7 @@ dependencies {
     compile 'com.google.firebase:firebase-storage:10.0.0'
     compile 'com.google.firebase:firebase-auth:10.0.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.android.support:design:25.1.1'
+    //compile 'com.android.support:design:25.1.1'
     //Add SeekBar multiple
     compile 'org.florescu.android.rangeseekbar:rangeseekbar-library:0.3.0'
 
