--- a/AdoptMe2/app/build.gradle
+++ b/AdoptMe2/app/build.gradle
@@ -35,8 +35,8 @@ dependencies {
     compile 'com.firebaseui:firebase-ui-database:1.0.1'
     compile 'com.google.firebase:firebase-storage:10.0.0'
     compile 'com.google.firebase:firebase-auth:10.0.0'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    //compile 'com.android.support:design:25.1.1'
+    compile 'com.github.bumptech.glide:glide:3.8.0'
+
     //Add SeekBar multiple
     compile 'org.florescu.android.rangeseekbar:rangeseekbar-library:0.3.0'
     //Add GEOFIRE
